--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="assets/css/base.css" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;display=swap&amp;subset=vietnamese"
-    rel="stylesheet" />
   <script src="https://kit.fontawesome.com/02611bfd0e.js" crossorigin="anonymous"></script>
   <title>shopee</title>
 </head>
@@ -91,8 +89,9 @@
         <div class="s-padding"></div>
       </div>
     </header>
-    <div class="container home-page">
-      <div class="banner-wrapper">
+    <div class="home-page">
+
+      <div class="container banner-wrapper">
         <div class="row banner container">
           <div class="banner__main hoverable0">
             <div class="left carousel__arrow">
@@ -123,7 +122,7 @@
         </div>
 
         <div class="banner__items">
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(https://cf.shopee.vn/file/46a2a2c810622f314d78455da5e5d926_xhdpi);"></div>
@@ -131,7 +130,7 @@
               <div class="flex KSe2W7 TF67TG">Khung Giờ Săn Sale</div>
             </div>
           </a>
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(https://cf.shopee.vn/file/b3535d7e56c58c4ebe9a87672d38cc5e_xhdpi);"></div>
@@ -139,7 +138,7 @@
               <div class="flex KSe2W7 TF67TG">Gì Cũng Rẻ - Mua Là Freeship</div>
             </div>
           </a>
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(https://cf.shopee.vn/file/b15de7d7368673a82583a88333ed23e7_xhdpi)"></div>
@@ -147,7 +146,7 @@
               <div class="flex KSe2W7 TF67TG">Bắt Trend - Giá Sốc</div>
             </div>
           </a>
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(https://cf.shopee.vn/file/b3535d7e56c58c4ebe9a87672d38cc5e_xhdpi);"></div>
@@ -155,7 +154,7 @@
               <div class="flex KSe2W7 TF67TG">Gì Cũng Rẻ - Mua Là Freeship</div>
             </div>
           </a>
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(https://cf.shopee.vn/file/21a4856d1fecd4eda143748661315dba_xhdpi);"></div>
@@ -163,7 +162,7 @@
               <div class="flex KSe2W7 TF67TG">Hoàn Xu 6% - Lên Đến 200K</div>
             </div>
           </a>
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(https://cf.shopee.vn/file/8d6d5ee795e7675fed39d31ba04c3b92_xhdpi);"></div>
@@ -171,7 +170,7 @@
               <div class="flex KSe2W7 TF67TG">Hàng Hiệu Giá Tốt</div>
             </div>
           </a>
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(https://cf.shopee.vn/file/29961f92098bc9153b88332110a91c87_xhdpi);"></div>
@@ -179,7 +178,7 @@
               <div class="flex KSe2W7 TF67TG">Hàng Quốc Tế - Deal x9K</div>
             </div>
           </a>
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(https://cf.shopee.vn/file/9df57ba80ca225e67c08a8a0d8cc7b85_xhdpi);"></div>
@@ -187,7 +186,7 @@
               <div class="flex KSe2W7 TF67TG">Nạp Thẻ, Hóa Đơn & Phim</div>
             </div>
           </a>
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(	https://cf.shopee.vn/file/96385a65fa50800e096bb790fa5c1dba_xhdpi);"></div>
@@ -195,7 +194,7 @@
               <div class="flex KSe2W7 TF67TG">Deal Sốc Từ 1K</div>
             </div>
           </a>
-          <a class="banner__item center-children" href="#">
+          <a class="banner__item center-children hover__float" href="#">
             <div class="col banner__item-wrapper">
               <div class="_5l6amx center-self"
                 style="background-image: url(https://cf.shopee.vn/file/ed849a82e8c66bbff8ec0f2869c6fbb7_xhdpi);"></div>
@@ -206,14 +205,280 @@
         </div>
 
       </div>
+
+      <div class="gray__wrapper">
+        <div class="container shopee-category">
+          <div class="flex category__header">
+            <div class="category__title">DANH MỤC</div>
+          </div>
+          <ul class="row category__items">
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/687f3967b7c2fe6a134a2c11894eea4b_tn);"></div>
+                <div class="category__item__desc">Thời Trang Nam</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(	https://cf.shopee.vn/file/75ea42f9eca124e9cb3cde744c060e4d_tn);"></div>
+                <div class="category__item__desc">Thời Trang Nữ</div>
+              </div>
+            </li>
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/31234a27876fb89cd522d7e3db1ba5ca_tn);"></div>
+                <div class="category__item__desc">Điện Thoại & Phụ Kiện</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/099edde1ab31df35bc255912bab54a5e_tn);"></div>
+                <div class="category__item__desc">Mẹ & Bé</div>
+              </div>
+            </li>
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(	https://cf.shopee.vn/file/978b9e4cb61c611aaaf58664fae133c5_tn);"></div>
+                <div class="category__item__desc">Thiết Bị Điện Tử</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/24b194a695ea59d384768b7b471d563f_tn);"></div>
+                <div class="category__item__desc">Nhà Cửa & Đời Sống</div>
+              </div>
+            </li>
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/c3f3edfaa9f6dafc4825b77d8449999d_tn);"></div>
+                <div class="category__item__desc">Máy Tính & Laptop</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/ef1f336ecc6f97b790d5aae9916dcb72_tn);"></div>
+                <div class="category__item__desc">Sắc Đẹp</div>
+              </div>
+            </li>
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/ec14dd4fc238e676e43be2a911414d4d_tn);"></div>
+                <div class="category__item__desc">Máy Ảnh & Máy Quay Phim</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/49119e891a44fa135f5f6f5fd4cfc747_tn);"></div>
+                <div class="category__item__desc">Sức Khỏe</div>
+              </div>
+            </li>
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(	https://cf.shopee.vn/file/86c294aae72ca1db5f541790f7796260_tn);"></div>
+                <div class="category__item__desc">Đồng Hồ</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/48630b7c76a7b62bc070c9e227097847_tn);"></div>
+                <div class="category__item__desc">Giày Dép Nữ</div>
+              </div>
+            </li>
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/74ca517e1fa74dc4d974e5d03c3139de_tn);"></div>
+                <div class="category__item__desc">Giày Dép Nam</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/fa6ada2555e8e51f369718bbc92ccc52_tn);"></div>
+                <div class="category__item__desc">Túi Ví Nữ</div>
+              </div>
+            </li>
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(	https://cf.shopee.vn/file/7abfbfee3c4844652b4a8245e473d857_tn);"></div>
+                <div class="category__item__desc">Thiết Bị Điện Gia Dụng</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/8e71245b9659ea72c1b4e737be5cf42e_tn);"></div>
+                <div class="category__item__desc">Phụ Kiện & Trang Sức Nữ</div>
+              </div>
+            </li>
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/6cb7e633f8b63757463b676bd19a50e4_tn);"></div>
+                <div class="category__item__desc">Thể Thao & Du Lịch</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/c432168ee788f903f1ea024487f2c889_tn);"></div>
+                <div class="category__item__desc">Bách Hóa Online</div>
+              </div>
+            </li>
+            <li class="col">
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/3fb459e3449905545701b418e8220334_tn);"></div>
+                <div class="category__item__desc">Ô Tô & Xe Máy & Xe Đạp</div>
+              </div>
+              <div class="col category__item hover__opa">
+                <div class="category__item__img"
+                  style="background-image: url(https://cf.shopee.vn/file/36013311815c55d303b0e6c62d6a8139_tn);"></div>
+                <div class="category__item__desc">Nhà Sách Online</div>
+              </div>
+            </li>
+            <div class="flex carousel-arrow hoverable0">
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+          </ul>
+        </div>
+        <div class="container shopee-flashsell">
+          <div class="row flashsell__header">
+            <div class="row center-children">
+              <div class="flashsell__h1">
+              </div>
+              <div class="row flashsell__h2">
+                <div class="countdown__num">00</div>
+                <div class="countdown__num">24</div>
+                <div class="countdown__num">30</div>
+              </div>
+            </div>
+            <div class="flashsell__more hoverable0">Xem Tất Cả
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+          </div>
+          <div class="flashsell__content">
+            <div class="row flashsell__items">
+              <div class="f__item__wrapper hoverable0">
+                <div class="flashsell__item"
+                  style=" background-image: url(https://cf.shopee.vn/file/1a32d71426b5299936d59909870e92b6_tn);">
+                  <div class="col flashsell__banner">
+                    <div class="percent">75%</div>
+                    <div class="tSV5KQ">GIẢM</div>
+                  </div>
+                  <div class="flashsell__tag"></div>
+                </div>
+                <div class="col center-children flashsell__details">
+
+                  <div>₫ 42.000</div>
+                  <div class="flashsell__bar">ĐÃ BÁN 24
+                    <div class="flashsell__fire"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="f__item__wrapper hoverable0">
+                <div class="flashsell__item"
+                  style=" background-image: url(https://cf.shopee.vn/file/18aba4260dfdb8204eb69e8dc765ab52_tn);">
+                  <div class="col flashsell__banner">
+                    <div class="percent">25%</div>
+                    <div class="tSV5KQ">GIẢM</div>
+                  </div>
+                  <div class="flashsell__tag"></div>
+                </div>
+                <div class="col center-children flashsell__details">
+
+                  <div>₫ 129.000</div>
+                  <div class="flashsell__bar">ĐÃ BÁN 126
+                    <div class="flashsell__fire"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="f__item__wrapper hoverable0">
+                <div class="flashsell__item"
+                  style=" background-image: url(https://cf.shopee.vn/file/db35e5a24bbd0cc76cd97ecc65d09080_tn);">
+                  <div class="col flashsell__banner">
+                    <div class="percent">15%</div>
+                    <div class="tSV5KQ">GIẢM</div>
+                  </div>
+                  <div class="flashsell__tag"></div>
+                </div>
+                <div class="col center-children flashsell__details">
+
+                  <div>₫ 264.000</div>
+                  <div class="flashsell__bar">ĐÃ BÁN 264
+                    <div class="flashsell__fire"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="f__item__wrapper hoverable0">
+                <div class="flashsell__item"
+                  style=" background-image: url(https://cf.shopee.vn/file/785c362ecb302c019e7e03dfe4c3dadb_tn);">
+                  <div class="col flashsell__banner">
+                    <div class="percent">32%</div>
+                    <div class="tSV5KQ">GIẢM</div>
+                  </div>
+                  <div class="flashsell__tag"></div>
+                </div>
+                <div class="col center-children flashsell__details">
+
+                  <div>₫ 99.000</div>
+                  <div class="flashsell__bar">ĐÃ BÁN 24
+                    <div class="flashsell__fire"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="f__item__wrapper hoverable0">
+                <div class="flashsell__item"
+                  style=" background-image: url(	https://cf.shopee.vn/file/6e034376e43fe53d382bb878a8c6b164_tn);">
+                  <div class="col flashsell__banner">
+                    <div class="percent">50%</div>
+                    <div class="tSV5KQ">GIẢM</div>
+                  </div>
+                  <div class="flashsell__tag"></div>
+                </div>
+                <div class="col center-children flashsell__details">
+
+                  <div>₫ 25.000</div>
+                  <div class="flashsell__bar">ĐÃ BÁN 398
+                    <div class="flashsell__fire"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="f__item__wrapper hoverable0">
+                <div class="flashsell__item"
+                  style=" background-image: url(https://cf.shopee.vn/file/dbecd7d9f39a270b301e5af4eadea981_tn);">
+                  <div class="col flashsell__banner">
+                    <div class="percent">15%</div>
+                    <div class="tSV5KQ">GIẢM</div>
+                  </div>
+                  <div class="flashsell__tag"></div>
+                </div>
+                <div class="col center-children flashsell__details">
+
+                  <div>₫ 9.000</div>
+                  <div class="flashsell__bar">ĐÃ BÁN 11
+                    <div class="flashsell__fire"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="flex carousel-arrow hoverable0">
+                <i class="fa-solid fa-chevron-right"></i>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="shopee__banner2">
+
+        </div>
+
+      </div>
+
     </div>
+
   </div>
 
-  <div id="mini-chat" class="mini-chat hoverable0">
+  <a id="mini-chat" class="mini-chat hoverable0">
     <i class="fa-solid fa-message"></i>
     <span>Chat</span>
     <div class="chat-number-badge">15</div>
-  </div>
+  </a>
 </body>
 
 </html>
